--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-php-doctrine2.enabled=true
 auxiliary.org-netbeans-modules-php-symfony2.appDir-path=bin
 auxiliary.org-netbeans-modules-php-symfony2.enabled=true
 include.path=${php.global.include.path}
