--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
+        "friendsofsymfony/user-bundle": "dev-master",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
